--- a/templates/user.html
+++ b/templates/user.html
@@ -1,1 +1,6 @@
+{% extends "base.html" %}
+{% block title %}Helooha!{% endblock %}
+
+{% block page_content %}
 <h1>Hello, {{ name }}</h1>
+{% endblock %}
