Switch to useing flask-wtf for forms management

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 
 {% block title %}Vasalxy{% endblock %}
 
-<!-- {% block head %}
+{% block head %}
 {{ super() }}
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-{% endblock %} -->
+<link rel="shortcut icon" href="{{ url_for('static', filename='bald37.png') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static', filename='bald37.png') }}" type="image/x-icon">
+{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -33,4 +33,9 @@
 <div class="container">
    {% block page_content %}{% endblock %}
 </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
 {% endblock %}
