--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Domiv{% endblock %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}Vasalxy{% endblock %}
 
 {% block page_content%}
-<h1>Hello, Dorks!</h1>
+<div class="page-header">
+  <h1>Hello, {% if name %}{{name}}{% else %} Dork!{% endif %}</h1>
+</div>
+{{wtf.quick_form(form)}}
 {% endblock %}
